[gd_scene load_steps=4 format=3 uid="uid://cmucteyo38nep"]

[ext_resource type="Script" uid="uid://oirrb78u84l1" path="res://scripts/carrot_collectible.gd" id="1_carrot"]
[ext_resource type="Texture2D" uid="uid://bvnvktmhmfw" path="res://sprites/General Tiles/carrot.png" id="2_7ybrn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_carrot"]
radius = 6.0

[node name="CarrotCollectible" type="Area2D"]
z_index = 1
collision_layer = 0
collision_mask = 2
script = ExtResource("1_carrot")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_carrot")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, 0)
scale = Vector2(0.53125, 0.53125)
texture = ExtResource("2_7ybrn")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
